src/test/ui/rfc-2126-extern-absolute-paths/meta.stderr
error[E0463]: can't find crate for `meta`
  --> $DIR/meta.rs:5:5
   |
LL | use meta;
   |     ^^^^ can't find crate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0463`.
